--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "64047a08",
+   "id": "54e5fc27",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e034ac51",
+   "id": "c1905351",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8866257e",
+   "id": "97adf68b",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66b2b46e",
+   "id": "d3b22a7e",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5c54f317",
+   "id": "af87c6ed",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef4e883",
+   "id": "bea4330e",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "eae6c302",
+   "id": "1e792495",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9a941f6e",
+   "id": "2f40e9b0",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4fab8e9a",
+   "id": "b9aed53b",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f94370ac",
+   "id": "9ca273c9",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b7b51cc1",
+   "id": "ec1f3e46",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9777411a",
+   "id": "6db541db",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "17d1d132",
+   "id": "a6dc8be6",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "38e4b102",
+   "id": "cecf24e0",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "19e0edf2",
+   "id": "d5d5c9ae",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fa1364f1",
+   "id": "2dbb89ec",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cd8bf542",
+   "id": "696336b8",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a743a829",
+   "id": "e062f577",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1595bc1f",
+   "id": "8a5d02eb",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0de2afe7",
+   "id": "05ad2970",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "bef303f7",
+   "id": "78a1e18f",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "922839f2",
+   "id": "42458a41",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "244152cc",
+   "id": "e761445f",
    "metadata": {},
    "outputs": [
     {
@@ -502,8 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "599a7403",
+   "execution_count": 78,
+   "id": "764e0ef4",
    "metadata": {},
    "outputs": [
     {
@@ -511,8 +511,8 @@
      "output_type": "stream",
      "text": [
       "Write your favourite word: volleyball\n",
-      "Chose a number: 4\n",
-      "index 4 in volleyball is: e\n"
+      "Chose a number: 5\n",
+      "You have chosen letter number 5 from volleyball, which is: y\n"
      ]
     }
    ],
@@ -526,13 +526,13 @@
     "if numeric>len(string):\n",
     "    print('Index is too high')\n",
     "else:\n",
-    "    print (f'index {numeric} in {string} is: {string[numeric]}')"
+    "    print (f'You have chosen letter number {numeric-} from {string}, which is: {string[numeric]}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d926afd",
+   "id": "d362f689",
    "metadata": {},
    "outputs": [],
    "source": []
