--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,18 +187,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201119c4",
+   "id": "add0c152",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = input ('Enter a word')\n",
+    "word = input ('Enter a word')\n",
     "index = int (input ('Enter an index number: '))\n",
     "if index < 0 :\n",
     "    print('num is Too low')\n",
-    "elif s[name] > 10 :\n",
-    "    print ('Too low')\n",
-    "elif x > 10:\n",
-    "    print ('Too High')"
+    "elif index > (len(word)-1) :\n",
+    "    print ('Index is beyond the length of a the string')\n",
+    "else "
    ]
   }
  ],
