--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "4abb0a7a",
+   "id": "191298f0",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5dd6cb52",
+   "id": "7b434fb9",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "f32e7466",
+   "id": "2f66faca",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d41b93ba",
+   "id": "d4d1987e",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "beaf6967",
+   "id": "f3811e63",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "ca25dcdd",
+   "id": "6a068ba3",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "89175f84",
+   "id": "d8d3fd27",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "12bd6349",
+   "id": "c0db9762",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "9fdf1bea",
+   "id": "696969d0",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "cf3770cd",
+   "id": "3501b6e2",
    "metadata": {},
    "outputs": [
     {
@@ -540,16 +540,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "f70a6854",
+   "execution_count": 109,
+   "id": "d82c5c98",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (3568989988.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[108], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    if index < 0:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: pineapple\n",
+      "Enter a number: 5\n"
      ]
     }
    ],
@@ -557,16 +557,16 @@
     "x = 'pineapple'\n",
     "word = input('Enter a word: ')\n",
     "index = input('Enter a number: ')\n",
-    "index = int(index)\n",
-    "s[5]\n",
+    "\n",
+    "[5]\n",
     "if index < 0:\n",
-    "    print('index 5 in 'pineapple' is 'p'')"
+    "    print('index 5 in \\'pineapple\\' is \\'p\\'')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53691630",
+   "id": "967bf705",
    "metadata": {},
    "outputs": [],
    "source": []
