--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd9838d",
+   "id": "cff0a132",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6c1ec9bb",
+   "id": "4d7c1e03",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "447620d4",
+   "id": "599c31a9",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b14e6362",
+   "id": "dcc3e0cd",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "030ac1cb",
+   "id": "063ac02e",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1d97ec45",
+   "id": "750e8a59",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "75901387",
+   "id": "841b5622",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b0793249",
+   "id": "395fe151",
    "metadata": {},
    "outputs": [
     {
@@ -254,31 +254,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1fa55c87",
+   "execution_count": 70,
+   "id": "6365f3ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a textasma\n",
+      "please enter a number4\n",
+      "this is too high\n",
+      "Try again!3\n"
+     ]
+    }
+   ],
    "source": [
     "text= input('please enter a text')\n",
     "number=input('please enter a number')\n",
     "number=int(number)\n",
     "count=len(text)\n",
-    "x=text[number]\n",
     "if number < 0:\n",
     "    print('This is too low')\n",
     "    number=input('Try again!')\n",
-    "elif count < number:\n",
+    "elif count <= number:\n",
     "    print('this is too high')\n",
     "    number=input('Try again!')\n",
     "else:\n",
-    "    print(f'the text entered is {test} {x} ')\n",
+    "    x=text[number]\n",
+    "    print(f'the text entered is {text} {x} ')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7732f1c1",
+   "id": "17beb198",
    "metadata": {},
    "outputs": [],
    "source": []
