--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "670d605d",
+   "id": "106df69b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7cedb3c7",
+   "id": "70141eca",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2179f83d",
+   "id": "2ab28c33",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a80306",
+   "id": "ae8873a5",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d24956bd",
+   "id": "9bbb4c41",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f27ff79b",
+   "id": "5778ab0d",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8562714b",
+   "id": "cefa73c3",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e0df03e2",
+   "id": "de876472",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2214a606",
+   "id": "482ef20e",
    "metadata": {},
    "outputs": [
     {
@@ -198,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "8e0e1ab9",
+   "execution_count": 57,
+   "id": "40cbb9d8",
    "metadata": {},
    "outputs": [
     {
@@ -207,8 +207,8 @@
      "output_type": "stream",
      "text": [
       "Enter the string : pineapple\n",
-      "Enter the index : 0\n",
-      "Your word is pineapple and its 0 chcracter is e\n"
+      "Enter the index : 1\n",
+      "Your word is pineapple and its 1 chcracter is 'p'\n"
      ]
     }
    ],
@@ -216,19 +216,19 @@
     "txt1 = input('Enter the string : ')\n",
     "id1 = input('Enter the index : ')\n",
     "id1 = int(id1)\n",
-    "if id1 < 0 :\n",
-    "    print('You entered negative number')\n",
+    "if id1 <= 0 :\n",
+    "    print('You entered zero or negative number')\n",
     "elif id1 > len(txt1) :\n",
     "    print('You entered too big index')\n",
     "else :\n",
-    "    print(f'Your word is {txt1} and its {id1} chcracter is {txt1[id1-1]}' )\n",
+    "    print(f'Your word is {txt1} and its {id1} chcracter is \\'{txt1[id1-1]}\\'' )\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef13d8a",
+   "id": "aca43522",
    "metadata": {},
    "outputs": [],
    "source": []
