--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "582d7029",
+   "id": "057244c9",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6e44cde",
+   "id": "75bb8151",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bcaf205",
+   "id": "1eb8748d",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "484b6af0",
+   "id": "0a5a6bab",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "63fa38a1",
+   "id": "2d37d984",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0342df3d",
+   "id": "13e62269",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9c14c7c0",
+   "id": "db34b8e1",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4e95dd8b",
+   "id": "38fa9dbb",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d4f47305",
+   "id": "fdc197c7",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "71870cac",
+   "id": "f71d0499",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4f89b792",
+   "id": "8bd6171a",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bd65b252",
+   "id": "520b03fb",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c0859e56",
+   "id": "cc1b71f2",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "61aed346",
+   "id": "1c6a980f",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d3b75822",
+   "id": "b86c2412",
    "metadata": {},
    "outputs": [
     {
@@ -331,17 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "e34c8d20",
+   "execution_count": 72,
+   "id": "18769397",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word:asd\n",
+      "Enter a word:asdf\n",
       "Enter an index0\n",
-      "Index <class 'int'> of asd is word[ind]\n"
+      "Index 0 of asdf is a\n"
      ]
     }
    ],
@@ -355,14 +355,13 @@
     "elif ind>int(len(word)-1):\n",
     "    print(f'Index is beyond the length of a the string')\n",
     "else:\n",
-    "    print(word[ind])\n",
-    "    #    print(f'Index {int} of {word} is word[ind]')"
+    "    print(f'Index {ind} of {word} is {word[ind]}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43d92e31",
+   "id": "fe7415b9",
    "metadata": {},
    "outputs": [],
    "source": []
