--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "555f5ac3",
+   "id": "4bfc7352",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bcab197d",
+   "id": "2dbb1c4b",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c0637194",
+   "id": "ec9c55ac",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9e567bff",
+   "id": "58895165",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3a3f3a72",
+   "id": "435b4519",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b6ecfc1e",
+   "id": "738fb5c4",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ed5fd9d7",
+   "id": "6ec6e885",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2573683a",
+   "id": "9df81160",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c761f6d",
+   "id": "e74b309c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d35927a",
+   "id": "c6adce66",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2161044e",
+   "id": "6a8ee108",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "1e3b641c",
+   "id": "223aae33",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7ab30588",
+   "id": "6582f2b2",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ca540c35",
+   "id": "847c011f",
    "metadata": {},
    "outputs": [
     {
@@ -292,30 +292,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "6ddf1f4c",
+   "execution_count": null,
+   "id": "0a62b16a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a word: taco\n",
-      "Enter an index: 4\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[78], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m numberofindex \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlen\u001b[39m(word):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mindex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is too big, and beyond index of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIndex \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumberofindex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of the word \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is the letter \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m(\u001b[43mword\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnumberofindex\u001b[49m\u001b[43m]\u001b[49m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word = input(\"Enter a word: \")\n",
     "index = input(\"Enter an index: \")\n",
@@ -323,13 +303,13 @@
     "\n",
     "if numberofindex > len(word):\n",
     "    print(f\"{index} is too big, and beyond index of {word}.\")\n",
-    "else: print(f\"Index {numberofindex} of the word {word} is the letter {(word[numberofindex])}\")"
+    "else: print(f\"Index {numberofindex} of the word {word} is the letter {word[numberofindex]}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd56a170",
+   "id": "ff91d14c",
    "metadata": {},
    "outputs": [],
    "source": []
