--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "191298f0",
+   "id": "a5e93a55",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7b434fb9",
+   "id": "ec56e4b0",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "2f66faca",
+   "id": "311a7ffd",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d4d1987e",
+   "id": "5667d371",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f3811e63",
+   "id": "bb6c00f8",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "6a068ba3",
+   "id": "97bea2bc",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "d8d3fd27",
+   "id": "f63daa46",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c0db9762",
+   "id": "fda5e966",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "696969d0",
+   "id": "1280d5dd",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "3501b6e2",
+   "id": "dba5e557",
    "metadata": {},
    "outputs": [
     {
@@ -540,16 +540,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "d82c5c98",
+   "execution_count": null,
+   "id": "3c4829a7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: pineapple\n",
-      "Enter a number: 5\n"
+      "Enter a word: pineapple\n"
      ]
     }
    ],
@@ -557,8 +556,7 @@
     "x = 'pineapple'\n",
     "word = input('Enter a word: ')\n",
     "index = input('Enter a number: ')\n",
-    "\n",
-    "[5]\n",
+    "s[x]\n",
     "if index < 0:\n",
     "    print('index 5 in \\'pineapple\\' is \\'p\\'')"
    ]
@@ -566,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "967bf705",
+   "id": "201d0ba8",
    "metadata": {},
    "outputs": [],
    "source": []
