--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "af337d86",
+   "id": "51dae4ee",
    "metadata": {},
    "outputs": [
     {
@@ -177,10 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f0fcb12f",
+   "execution_count": 51,
+   "id": "fd5be98a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: sdfsdfdsfsdfsd\n",
+      "Enter number beyond the index of string: 4\n",
+      "index 4 in 'sdfsdfdsfsdfsd' is s\n"
+     ]
+    }
+   ],
    "source": [
     "str1 = input('Enter string: ')\n",
     "num1 = input('Enter number beyond the index of string: ')\n",
@@ -190,13 +200,13 @@
     "elif num1 > len(str1):\n",
     "    print(f'{num1} is too high')\n",
     "else:\n",
-    "    print(f'index {num1} in \\'{str1}\\' is str1[{num1}]')\n"
+    "    print(f'index {num1} in \\'{str1}\\' is {str1[num1-1]}')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ed62fd5",
+   "id": "65737c5f",
    "metadata": {},
    "outputs": [],
    "source": []
