--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "54e5fc27",
+   "id": "0274ba81",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c1905351",
+   "id": "9012a798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97adf68b",
+   "id": "6cdd3c9d",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d3b22a7e",
+   "id": "d62da8b2",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af87c6ed",
+   "id": "7c816248",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bea4330e",
+   "id": "c6581500",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1e792495",
+   "id": "6db3fd1e",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2f40e9b0",
+   "id": "0fc8ba56",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b9aed53b",
+   "id": "4ca42e8f",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9ca273c9",
+   "id": "21e739af",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ec1f3e46",
+   "id": "6a1f1661",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6db541db",
+   "id": "c85c61cb",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a6dc8be6",
+   "id": "72a0e2f8",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cecf24e0",
+   "id": "09f4f6f9",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d5d5c9ae",
+   "id": "c704d859",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2dbb89ec",
+   "id": "c2991719",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "696336b8",
+   "id": "5f928f49",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e062f577",
+   "id": "0b973384",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8a5d02eb",
+   "id": "36a15c1d",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "05ad2970",
+   "id": "4a78a6ae",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "78a1e18f",
+   "id": "42355a3b",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "42458a41",
+   "id": "0231330f",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e761445f",
+   "id": "fabf396d",
    "metadata": {},
    "outputs": [
     {
@@ -502,8 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "764e0ef4",
+   "execution_count": 79,
+   "id": "f339ee56",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
      "text": [
       "Write your favourite word: volleyball\n",
       "Chose a number: 5\n",
-      "You have chosen letter number 5 from volleyball, which is: y\n"
+      "You have chosen letter number 4 from volleyball, which is: y\n"
      ]
     }
    ],
@@ -526,13 +526,13 @@
     "if numeric>len(string):\n",
     "    print('Index is too high')\n",
     "else:\n",
-    "    print (f'You have chosen letter number {numeric-} from {string}, which is: {string[numeric]}')"
+    "    print (f'You have chosen letter number {numeric+1} from {string}, which is: {string[numeric]}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d362f689",
+   "id": "361887f1",
    "metadata": {},
    "outputs": [],
    "source": []
