--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -186,10 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "add0c152",
+   "execution_count": 55,
+   "id": "7a3780ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a wordahmed\n",
+      "Enter an index number: 2\n",
+      "ahmed 2\n"
+     ]
+    }
+   ],
    "source": [
     "word = input ('Enter a word')\n",
     "index = int (input ('Enter an index number: '))\n",
@@ -197,8 +207,17 @@
     "    print('num is Too low')\n",
     "elif index > (len(word)-1) :\n",
     "    print ('Index is beyond the length of a the string')\n",
-    "else "
+    "else:\n",
+    "    print (word , index)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "582dcb82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
