--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8e795590",
+   "id": "c634d77f",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d0680f7",
+   "id": "abb7095e",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3a83c7d2",
+   "id": "2568afc8",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43756225",
+   "id": "0da527ae",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8ab57259",
+   "id": "f45c9540",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4ce194b8",
+   "id": "954094a9",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "507ddf07",
+   "id": "c61bae6b",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e3c0731c",
+   "id": "7764426d",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "faf07ede",
+   "id": "3ba140a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2544a42a",
+   "id": "e11a1fb2",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcab0c0b",
+   "id": "067ac4e6",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9bf910b8",
+   "id": "e603bc8e",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "18aa4783",
+   "id": "22288dcc",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2f53080d",
+   "id": "859d1181",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06645dbc",
+   "id": "46f0f488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "831d3d95",
+   "id": "d32227dc",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a34175ef",
+   "id": "96ff7890",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ed615475",
+   "id": "0932c8a7",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5fb7aae5",
+   "id": "72aa0ee0",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9843b601",
+   "id": "f32290f3",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fc030d72",
+   "id": "6d616bf3",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "acbf6d7f",
+   "id": "e38a04df",
    "metadata": {},
    "outputs": [
     {
@@ -439,14 +439,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "210250f3",
+   "id": "032fa894",
    "metadata": {},
    "outputs": [],
    "source": [
     "string = input('Enter the string: ')\n",
     "num = input('Enter the numeric index: ')\n",
     "if num < 0 :\n",
-    "    print('Error: n')"
+    "    print(f'Error: numeric index {num} is too low')\n",
+    "elif num > [len(string) -1] :\n",
+    "    print(f'Error: numeric index {num} is too low')\n",
+    "    \n",
+    "    "
    ]
   }
  ],
