--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "106df69b",
+   "id": "c992f7f2",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "70141eca",
+   "id": "9f6fb9b4",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2ab28c33",
+   "id": "c8ba5b10",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae8873a5",
+   "id": "fc974095",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9bbb4c41",
+   "id": "1303dd71",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5778ab0d",
+   "id": "7511e01e",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cefa73c3",
+   "id": "04ecdb0c",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "de876472",
+   "id": "8bb8d511",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "482ef20e",
+   "id": "3503733b",
    "metadata": {},
    "outputs": [
     {
@@ -198,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "40cbb9d8",
+   "execution_count": 61,
+   "id": "e371abf2",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
      "text": [
       "Enter the string : pineapple\n",
       "Enter the index : 1\n",
-      "Your word is pineapple and its 1 chcracter is 'p'\n"
+      "Your word is pineapple and its 1 character is 'p'\n"
      ]
     }
    ],
@@ -221,14 +221,14 @@
     "elif id1 > len(txt1) :\n",
     "    print('You entered too big index')\n",
     "else :\n",
-    "    print(f'Your word is {txt1} and its {id1} chcracter is \\'{txt1[id1-1]}\\'' )\n",
+    "    print(f'Your word is {txt1} and its {id1} character is \\'{txt1[id1-1]}\\'' )\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca43522",
+   "id": "c8ce8247",
    "metadata": {},
    "outputs": [],
    "source": []
