--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "057244c9",
+   "id": "0243cc43",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "75bb8151",
+   "id": "aa6d7139",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eb8748d",
+   "id": "1a6e7816",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a5a6bab",
+   "id": "3a394098",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d37d984",
+   "id": "a6f1cf9f",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "13e62269",
+   "id": "61a4c744",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "db34b8e1",
+   "id": "8a0c44c3",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "38fa9dbb",
+   "id": "4d26bd62",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fdc197c7",
+   "id": "98b18b13",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f71d0499",
+   "id": "c34201a0",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8bd6171a",
+   "id": "9748a008",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "520b03fb",
+   "id": "d284d004",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cc1b71f2",
+   "id": "6b943a26",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1c6a980f",
+   "id": "16502b5f",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b86c2412",
+   "id": "f81a0b12",
    "metadata": {},
    "outputs": [
     {
@@ -331,8 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "18769397",
+   "execution_count": 74,
+   "id": "0c2a234f",
    "metadata": {},
    "outputs": [
     {
@@ -340,8 +340,8 @@
      "output_type": "stream",
      "text": [
       "Enter a word:asdf\n",
-      "Enter an index0\n",
-      "Index 0 of asdf is a\n"
+      "Enter an index2\n",
+      "Index 2 of asdf is d\n"
      ]
     }
    ],
@@ -352,7 +352,7 @@
     "\n",
     "if ind<0:\n",
     "    print('Index is too low.')\n",
-    "elif ind>int(len(word)-1):\n",
+    "elif ind>len(word)-1:\n",
     "    print(f'Index is beyond the length of a the string')\n",
     "else:\n",
     "    print(f'Index {ind} of {word} is {word[ind]}')"
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7415b9",
+   "id": "189cdf3c",
    "metadata": {},
    "outputs": [],
    "source": []
