--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4bfc7352",
+   "id": "88f00844",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2dbb1c4b",
+   "id": "935baf29",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ec9c55ac",
+   "id": "c5f15b4f",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "58895165",
+   "id": "040e9391",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "435b4519",
+   "id": "a9ead268",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "738fb5c4",
+   "id": "ab1bca8f",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6ec6e885",
+   "id": "8ea01363",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9df81160",
+   "id": "0d527bca",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e74b309c",
+   "id": "5e437cc3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6adce66",
+   "id": "3c5bf0fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6a8ee108",
+   "id": "d4a217b1",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "223aae33",
+   "id": "60963a3f",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "6582f2b2",
+   "id": "61ca4bc7",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "847c011f",
+   "id": "f6efe758",
    "metadata": {},
    "outputs": [
     {
@@ -292,10 +292,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a62b16a",
+   "execution_count": 88,
+   "id": "0b6477f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: taco\n",
+      "Enter an index: 5\n",
+      "5 is too big, and beyond index of taco.\n"
+     ]
+    }
+   ],
    "source": [
     "word = input(\"Enter a word: \")\n",
     "index = input(\"Enter an index: \")\n",
@@ -309,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff91d14c",
+   "id": "d2ad152e",
    "metadata": {},
    "outputs": [],
    "source": []
