--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "51dae4ee",
+   "id": "fb2f3def",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fd5be98a",
+   "id": "500a9c51",
    "metadata": {},
    "outputs": [
     {
@@ -200,13 +200,13 @@
     "elif num1 > len(str1):\n",
     "    print(f'{num1} is too high')\n",
     "else:\n",
-    "    print(f'index {num1} in \\'{str1}\\' is {str1[num1-1]}')\n"
+    "    print(f'index {num1} in \\'{str1}\\' is {str1[num1-1]}') # print the letter considering that 0 is the first letter\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65737c5f",
+   "id": "f3780f32",
    "metadata": {},
    "outputs": [],
    "source": []
