--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c634d77f",
+   "id": "6037c945",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "abb7095e",
+   "id": "2b12c54f",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2568afc8",
+   "id": "05193348",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0da527ae",
+   "id": "acd7e410",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f45c9540",
+   "id": "f5562b7f",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "954094a9",
+   "id": "7804bcd4",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c61bae6b",
+   "id": "c2af94d8",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7764426d",
+   "id": "76a1dc98",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3ba140a4",
+   "id": "cbb4d794",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e11a1fb2",
+   "id": "45087d0e",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "067ac4e6",
+   "id": "1595475b",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e603bc8e",
+   "id": "d49fb6bd",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "22288dcc",
+   "id": "dbb91933",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "859d1181",
+   "id": "b9dcc305",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46f0f488",
+   "id": "2e042b30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d32227dc",
+   "id": "da6bbb1d",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "96ff7890",
+   "id": "bfc612c0",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0932c8a7",
+   "id": "390a360e",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "72aa0ee0",
+   "id": "620d0a9f",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f32290f3",
+   "id": "dcd606c4",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "6d616bf3",
+   "id": "e68c2362",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e38a04df",
+   "id": "e8af0860",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "032fa894",
+   "id": "114461bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,9 +449,19 @@
     "    print(f'Error: numeric index {num} is too low')\n",
     "elif num > [len(string) -1] :\n",
     "    print(f'Error: numeric index {num} is too low')\n",
+    "else:\n",
+    "    print(f'corr')\n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf70422e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
