--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc87387",
+   "id": "4127ba6b",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a810bd36",
+   "id": "e8f30ca3",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "efd95dfd",
+   "id": "126ddfd0",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f5cd4333",
+   "id": "af155be6",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d49e8e42",
+   "id": "7b122aef",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d430460e",
+   "id": "c3ddc746",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "cbb14bac",
+   "id": "d1bed587",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "116afbd1",
+   "id": "1f5f5d17",
    "metadata": {},
    "outputs": [
     {
@@ -254,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "33a167b2",
+   "execution_count": 74,
+   "id": "60d1c47b",
    "metadata": {},
    "outputs": [
     {
@@ -263,20 +263,9 @@
      "output_type": "stream",
      "text": [
       "please enter a textasma\n",
-      "please enter a number4\n",
-      "this is too high\n",
-      "Try again!3\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[72], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mthis is too high\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m     number\u001b[38;5;241m=\u001b[39m\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTry again!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m     x\u001b[38;5;241m=\u001b[39m\u001b[43mtext\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mthe text entered is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtext\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+      "please enter a number-2\n",
+      "This is too low\n",
+      "Try again!2\n"
      ]
     }
    ],
@@ -291,8 +280,6 @@
     "elif count <= number:\n",
     "    print('this is too high')\n",
     "    number=input('Try again!')\n",
-    "    x=text[number]\n",
-    "    print(f'the text entered is {text} {x} ')\n",
     "else:\n",
     "    x=text[number]\n",
     "    print(f'the text entered is {text} {x} ')\n",
@@ -302,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acc6895",
+   "id": "af8eb783",
    "metadata": {},
    "outputs": [],
    "source": []
