--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6037c945",
+   "id": "5a34a56a",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b12c54f",
+   "id": "7c37f96e",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05193348",
+   "id": "f28a6d93",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "acd7e410",
+   "id": "ec74f19c",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f5562b7f",
+   "id": "8a67264e",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7804bcd4",
+   "id": "77619a54",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c2af94d8",
+   "id": "e87cd458",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "76a1dc98",
+   "id": "8c2ef442",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cbb4d794",
+   "id": "2fccba55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "45087d0e",
+   "id": "617720d1",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1595475b",
+   "id": "c8c5e08d",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d49fb6bd",
+   "id": "0aa08abf",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dbb91933",
+   "id": "2ee0e9c4",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b9dcc305",
+   "id": "a663ead3",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e042b30",
+   "id": "9b8bba5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "da6bbb1d",
+   "id": "2178b584",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "bfc612c0",
+   "id": "87367add",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "390a360e",
+   "id": "4e628407",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "620d0a9f",
+   "id": "d439e6a8",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "dcd606c4",
+   "id": "357f76ab",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e68c2362",
+   "id": "5a51a0c4",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e8af0860",
+   "id": "4f9c7ca7",
    "metadata": {},
    "outputs": [
     {
@@ -438,13 +438,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "114461bd",
+   "execution_count": 49,
+   "id": "d2bf7149",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: pineapple\n",
+      "Enter the numeric index: -1\n",
+      "Error: numeric index -1 is too low\n"
+     ]
+    }
+   ],
    "source": [
     "string = input('Enter the string: ')\n",
     "num = input('Enter the numeric index: ')\n",
+    "num = int(num)\n",
     "if num < 0 :\n",
     "    print(f'Error: numeric index {num} is too low')\n",
     "elif num > [len(string) -1] :\n",
@@ -458,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf70422e",
+   "id": "38221126",
    "metadata": {},
    "outputs": [],
    "source": []
