--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6ad212aa",
+   "id": "9236c859",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6ce900bb",
+   "id": "0bde090d",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6c5fb1cd",
+   "id": "2b50912c",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5f45d7aa",
+   "id": "492ffadc",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3ca10a15",
+   "id": "133c2ee6",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f4fcfc39",
+   "id": "b1bb7b4e",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "be4d72e8",
+   "id": "4e96bf23",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4d3c5694",
+   "id": "37788397",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "59073b63",
+   "id": "2fe2292a",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "bf563b16",
+   "id": "d92f1f19",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e851719a",
+   "id": "60fc9953",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b1edd37c",
+   "id": "a90d81ca",
    "metadata": {},
    "outputs": [
     {
@@ -290,17 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "727994fc",
+   "execution_count": 65,
+   "id": "6f5f813b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write a name of a fruitPinnaple\n",
-      "Write a inxed number to get the character43\n",
-      "beyond the bounds of string\n"
+      "Write a name of a fruitorange\n",
+      "Write a inxed number to get the character3\n",
+      "n\n"
      ]
     }
    ],
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f699ea9",
+   "id": "4266aa5e",
    "metadata": {},
    "outputs": [],
    "source": []
