--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "9cded83f",
+   "id": "5296bac5",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "680b5e16",
+   "id": "a1925816",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "be1d79d4",
+   "id": "5b11e2ef",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "4169292e",
+   "id": "8c2e53ed",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "8ae2505d",
+   "id": "9c63bbac",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "0451c8ae",
+   "id": "0e066c5d",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "a9d6eef0",
+   "id": "cc82abf1",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "5f378561",
+   "id": "2efd48d4",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6a9cf7e2",
+   "id": "d58c5c31",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e9961779",
+   "id": "bea1200b",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "cb28df90",
+   "id": "2f94fd4f",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
     "x = 'pineapple'\n",
     "word = input('Enter a word: ')\n",
     "index = input('Enter a number: ')\n",
-    "s[x]\n",
+    "index = in\n",
     "if index < 0:\n",
     "    print('index 5 in \\'pineapple\\' is \\'p\\'')"
    ]
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35010fae",
+   "id": "aac85d4c",
    "metadata": {},
    "outputs": [],
    "source": []
