--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fbfee8a",
+   "id": "8fa086e0",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "77e3cf76",
+   "id": "652bb145",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6ab050b8",
+   "id": "797d206c",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "54411748",
+   "id": "502da67e",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "15972a84",
+   "id": "745a4a88",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "318bc49f",
+   "id": "0f9fb020",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "17d19036",
+   "id": "26759189",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3d51acc5",
+   "id": "c4bb3c5f",
    "metadata": {},
    "outputs": [
     {
@@ -254,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "d8dbb817",
+   "execution_count": null,
+   "id": "70b7a5f2",
    "metadata": {},
    "outputs": [
     {
@@ -263,8 +263,8 @@
      "output_type": "stream",
      "text": [
       "please enter a textasma\n",
-      "please enter a number2\n",
-      "the text entered is asma m \n"
+      "please enter a number6\n",
+      "this is too high\n"
      ]
     }
    ],
@@ -272,11 +272,10 @@
     "text= input('please enter a text')\n",
     "number=input('please enter a number')\n",
     "number=int(number)\n",
-    "count=len(text)\n",
     "if number < 0:\n",
     "    print('This is too low')\n",
     "    number=input('Try again!')\n",
-    "elif count <= number:\n",
+    "elif len(text) <= number:\n",
     "    print('this is too high')\n",
     "    number=input('Try again!')\n",
     "else:\n",
@@ -287,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a65c5b5",
+   "id": "600b997f",
    "metadata": {},
    "outputs": [],
    "source": []
